--- a/samplersFramework/src/main/res/values/strings.xml
+++ b/samplersFramework/src/main/res/values/strings.xml
@@ -34,7 +34,9 @@
     <!-- InsertText Fragment -->
     <string name="error_must_insert_text">Debe ingresar algo</string>
 
-
+    <!-- for audio record-->
+    <string name="record_in_progress">Recording</string>
+    <string name="record_prompt">Tap the button to start recording</string>
 
 
 </resources>
