recordStep unfinished (Runtime exception)

--- a/samplersFramework/src/main/res/values/strings.xml
+++ b/samplersFramework/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <!-- for audio record-->
     <string name="record_in_progress">Recording</string>
     <string name="record_prompt">Tap the button to start recording</string>
+    <string name="resume_recording_button">Resume</string>
+    <string name="pause_recording_button">Pause</string>
 
 
 </resources>
