playback audio file (unfinished)

--- a/samplersFramework/src/main/res/values/strings.xml
+++ b/samplersFramework/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="start_recording_button">Grabar</string>
     <string name="play_recorded">Reproducir</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
